--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   background-color: #242424;
 
   font-synthesis: none;
+  padding:0;
+  margin:0;
 }
 
 a {
@@ -29,12 +31,17 @@ a:hover {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  margin: 0;
+  padding:0;
 }
 
 body {
   margin: 0;
+  padding:0;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -83,7 +90,7 @@ button:focus-visible {
 /* GLOBAL STYLE */
 
 .container {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
