--- a/src/index.css
+++ b/src/index.css
@@ -285,7 +285,6 @@ ul {
   gap: 24px;
 }
 
-
 .step-number {
   display: flex;
   justify-content: center;
@@ -337,8 +336,7 @@ ul.core_items {
   list-style-type: none;
 }
 
-ul.core_items li
-{
+ul.core_items li {
   float: left;
   width: 33%;
   display: inline;
@@ -353,8 +351,7 @@ ul.archive_items {
   list-style-type: none;
 }
 
-ul.archive_items li
-{
+ul.archive_items li {
   float: left;
   width: 30%;
   display: inline;
@@ -394,7 +391,6 @@ ul.archive_items li
 
 /* STORY */
 
-
 .section-story {
   padding: 96px 32px;
 }
@@ -421,15 +417,14 @@ ul.story_items {
   list-style-type: none;
 }
 
-ul.story_items li
-{
+ul.story_items li {
   float: left;
   width: 30%;
   display: inline;
 }
 
 .story-card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px;
 }
@@ -454,8 +449,7 @@ ul.plan_items {
   list-style-type: none;
 }
 
-ul.plan_items li
-{
+ul.plan_items li {
   float: left;
   width: 30%;
   display: inline;
@@ -465,8 +459,7 @@ ul.plan_items-description {
   list-style-type: none;
 }
 
-ul.plan_items-description li
-{
+ul.plan_items-description li {
   float: left;
   /*width: 30%;*/
   display: inline;
@@ -495,8 +488,7 @@ ul.question_items {
   list-style-type: none;
 }
 
-ul.question_items li
-{
+ul.question_items li {
   float: left;
   width: 50%;
   display: inline;
