--- a/src/index.css
+++ b/src/index.css
@@ -529,3 +529,31 @@ ul.question_items li
   padding: 96px 32px;
   border-radius: 30px;
 }
+
+/*LOGIN*/
+.section-login {
+  background: #1a1a1a !important;
+  color: white;
+  padding: 96px 32px;
+}
+
+input[type=text] {
+  width: 30%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+input[type=password] {
+  width: 30%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+button[type=submit] {
+  width: 15%;
+  padding: 3px 2px;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
