--- a/src/pages/Catalog/Catalog.module.css
+++ b/src/pages/Catalog/Catalog.module.css
@@ -3,6 +3,10 @@
   --color--shade: #c92a2a;
 }
 
+* {
+  transition: transform 0.3s;
+}
+
 .catalog-wrapper {
   display: flex;
   flex-direction: column;
@@ -77,7 +81,7 @@
 
 .list-movies {
   display: grid;
-  grid-template-columns: repeat(3, 282px);
+  grid-template-columns: repeat(3, 320px);
   gap: 24px;
   justify-content: center;
   align-content: center;
@@ -88,10 +92,34 @@
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
+.card-movie:hover {
+  transform: scale(1.05);
+}
+
 .poster {
-  width: 250px;
+  width: 280px;
+  margin-bottom: 8px;
 }
 
 .release-date {
   color: #aaa;
+  margin-bottom: 8px;
+  margin-top: -4px;
+}
+
+.movie-link {
+  color: #000;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.movie-link:hover {
+  color: var(--color--primary);
+  text-decoration: underline;
+}
+
+.movie-title {
+  display: inline;
 }
