--- a/src/pages/HomePage/FeedbackList/FeedbackList.module.css
+++ b/src/pages/HomePage/FeedbackList/FeedbackList.module.css
@@ -1,139 +1,141 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .feedback-wrapper {
-    width: 100vw;
-    height: 1000px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #F2F2F2;
-    color: black;
-    padding-top: 40px;
+  width: 100vw;
+  height: 1000px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #f2f2f2;
+  color: black;
+  padding-top: 40px;
 }
 
 .feedback-title {
-    font-size: 46px;
-    font-weight: 800;
-    font-family: "Roboto Slab", serif;
+  font-size: 46px;
+  font-weight: 800;
+  font-family: "Roboto Slab", serif;
 }
 
 .feedback-container {
-    width: 1320px;
-    height: 254px;
-    display: flex;
-    font-family: "Poppins", serif;
-    justify-content: space-between;
-    align-items: center;
+  width: 1320px;
+  height: 254px;
+  display: flex;
+  font-family: "Poppins", serif;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .feedback-content {
-    width: 424px;
-    height: 254px;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 30px;
-    border-radius: 8px;
-    align-items: flex-start;
+  width: 424px;
+  height: 254px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px;
+  border-radius: 8px;
+  align-items: flex-start;
 }
 
 .feedback {
-    height: 150px; 
-    width: 376px;
-    font-size: 16px;
-    font-style: italic;
+  height: 150px;
+  width: 376px;
+  font-size: 16px;
+  font-style: italic;
 }
 
-.user-info{
-    width: 200px;
-    height: 56px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 5px;
+.user-info {
+  width: 200px;
+  height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 5px;
 }
 
-.username{
-    font-size: 16px;
-    font-weight: 600;
-    color:#d81a24;
+.username {
+  font-size: 16px;
+  font-weight: 600;
+  color: #d81a24;
 }
 
-.avatar{
-    width: 56px;
-    height: 56px;
+.avatar {
+  width: 56px;
+  height: 56px;
 }
 
 .divider {
-    border: none;
-    border-top: 2px solid #ccc;
-    width: 10%;
+  border: none;
+  border-top: 2px solid #ccc;
+  width: 10%;
 }
 
-  
 .send-feedback {
-    width: 100%;
-    height: 400px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 
 .send-feedback-title {
-    font-size: 46px;
-    font-weight: 800;
-    font-family: "Roboto Slab", serif;
+  font-size: 46px;
+  font-weight: 800;
+  font-family: "Roboto Slab", serif;
 }
 
-.your-name{
-    width: 600px;
-    height: 38px;
-    font-family: "Poppins", serif;
-    padding-left: 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
+.your-name {
+  width: 600px;
+  height: 38px;
+  padding: 24px 18px;
+  font-family: "Poppins", serif;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  background-color: #fff;
+  color: #333;
 }
 
 .your-feedback {
-    width: 600px;
-    height: 150px;
-    font-family: "Poppins", serif;
-    padding-left: 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    padding-top: 10px;
+  background-color: #fff;
+  color: #333;
+  width: 600px;
+  height: 150px;
+  font-family: "Poppins", serif;
+  padding: 24px 18px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  padding-top: 10px;
 }
 
-.add-feedback::placeholder
-{
-    color: red;
+.add-feedback::placeholder {
+  color: red;
 }
 
 .add-feedback {
-    width: 250px;
-    height: 50px;
-    font-family: "Roboto Slab", serif;
-    font-size: 18px;
-    font-weight: 700;
-    padding: 15px 40px;
-    border: #d81a24;
-    background-color: #d81a24;
-    color: white;
-    border: 2px solid #d81a24;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 250px;
+  height: 50px;
+  font-family: "Roboto Slab", serif;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 15px 40px;
+  border: #d81a24;
+  background-color: #d81a24;
+  color: white;
+  border: 2px solid #d81a24;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .add-feedback:hover {
-    background-color: transparent;
-    cursor: pointer;
-    border: 2px solid #d81a24;
-    transition: .4s ease-in-out;
-    color: #d81a24;
+  background-color: transparent;
+  cursor: pointer;
+  border: 2px solid #d81a24;
+  transition: 0.4s ease-in-out;
+  color: #d81a24;
 }
