Add navbar + fix button styles

--- a/src/pages/MovieDetail/MovieDetail.module.css
+++ b/src/pages/MovieDetail/MovieDetail.module.css
@@ -226,3 +226,8 @@
   justify-content: space-between;
   margin-bottom: 8px;
 }
+
+.add-to-cart {
+  padding: 8px 16px;
+  background-color: var(--color--primary);
+}
