--- a/src/pages/MovieDetail/MovieDetail.module.css
+++ b/src/pages/MovieDetail/MovieDetail.module.css
@@ -115,7 +115,7 @@
     z-index: 1;
     height: 100%;
     left: 40%;
-    background-size: cover;
+    background-size: 930px 500px;
     border-radius: 11px;
   }
 }
