--- a/src/pages/Catalog/Catalog.module.css
+++ b/src/pages/Catalog/Catalog.module.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 48px;
 }
 
 .heading {
@@ -21,20 +22,22 @@
 .form {
   display: flex;
   align-items: center;
-  gap: 8px;
-  padding: 10px;
-  background-color: #f3f3f3;
-  border-radius: 5px;
+  padding: 0 16px;
+  border-radius: 8px;
   width: 100%;
   max-width: 800px;
   margin: 72px 0 64px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.search-icon {
+  width: 28px;
+}
+
 .input {
   flex: 1;
-  padding: 8px;
-  font-size: 18px;
+  padding: 16px;
+  font-size: 24px;
   border: 1px solid #ccc;
   border: none;
   color: #000;
@@ -49,11 +52,13 @@
 }
 
 .select {
-  padding: 8px;
-  color: #000;
-  font-size: 18px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  padding: 8px 12px;
+  color: #333;
+  font-size: 20px;
+  /* border: 1px solid #ccc; */
+  border: none;
+  border-left: 3px solid #ddd;
+  /* border-radius: 4px; */
   outline: none;
   background-color: #fff;
   transition: border-color 0.3s;
@@ -64,6 +69,7 @@
 }
 
 .button {
+  margin-left: 16px;
   padding: 12px 24px;
   text-transform: uppercase;
   font-size: 18px;
@@ -81,10 +87,11 @@
 
 .list-movies {
   display: grid;
-  grid-template-columns: repeat(3, 320px);
+  grid-template-columns: repeat(4, 320px);
   gap: 24px;
   justify-content: center;
   align-content: center;
+  padding: 0 0 96px;
 }
 
 .card-movie {
@@ -98,6 +105,7 @@
 
 .poster {
   width: 280px;
+  height: 420px;
   margin-bottom: 8px;
 }
 
@@ -122,4 +130,8 @@
 
 .movie-title {
   display: inline;
+}
+
+.paginate {
+  margin-bottom: 96px;
 }
