--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -5,6 +5,7 @@
   gap: 20px;
   margin-left: 170px;
   margin-right: 170px;
+  margin-top: 50px;
 }
 
 .cartTableSection {
@@ -118,4 +119,23 @@
 
 .checkoutButton:hover {
   background-color: #c82333;
+}
+
+.colRemoveButton {
+  width: 10%;
+}
+.colProduct {
+  width: 40%;
+}
+
+.colPrice {
+  width: 15%;
+}
+
+.colQuantity {
+  width: 15%;
+}
+
+.colTotal {
+  width: 15%;
 }
