--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -157,7 +157,7 @@
 .list-movies img:hover {
   cursor: pointer;
   transform: scale(1.05);
-  transition: transform 0.5s ease;
+  transition: transform 0.3s ease;
 }
 
 .list-movies-description {
@@ -332,8 +332,7 @@
   color: white;
   border: 2px solid #d81a24;
   align-items: center;
-  display: flex
-;
+  display: flex;
   justify-content: center;
 }
 
