--- a/src/pages/Catalog/Catalog.module.css
+++ b/src/pages/Catalog/Catalog.module.css
@@ -87,7 +87,7 @@
 
 .list-movies {
   display: grid;
-  grid-template-columns: repeat(4, 320px);
+  grid-template-columns: repeat(4, 250px);
   gap: 24px;
   justify-content: center;
   align-content: center;
@@ -95,7 +95,8 @@
 }
 
 .card-movie {
-  padding: 32px 16px;
+  border-radius: 9px;
+  padding: 20px 18px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
@@ -104,8 +105,8 @@
 }
 
 .poster {
-  width: 280px;
-  height: 420px;
+  width: 210px;
+  height: 280px;
   margin-bottom: 8px;
 }
 
@@ -130,6 +131,7 @@
 
 .movie-title {
   display: inline;
+  font-size: 18px;
 }
 
 .paginate {
