--- a/src/pages/CheckoutPage/CheckoutPage.module.css
+++ b/src/pages/CheckoutPage/CheckoutPage.module.css
@@ -310,12 +310,12 @@
 }
 
 .viewOrderButton {
-  background-color: #e53935; /* Màu đỏ chủ đạo */
+  background-color: #e53935;
   color: white;
 }
 
 .continueShoppingButton {
-  background-color: #e53935; /* Màu vàng nhấn */
+  background-color: #e53935;
   color: white;
 }
 
