--- a/src/pages/AccountPage/AccountPage.module.css
+++ b/src/pages/AccountPage/AccountPage.module.css
@@ -10,7 +10,7 @@
 
 .user-info {
   width: 750px;
-  height: 540px;
+  /* height: 540px; */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   gap: 30px;
@@ -25,7 +25,7 @@
   align-content: center;
   align-items: center;
   gap: 15px;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 .user-form-info input {
@@ -35,9 +35,12 @@
   border-radius: 4px;
   height: 38px;
   padding: 10px;
+  font-size: 16px;
   border: none;
-  font-family:"Poppins", serif;
-  background-color: #F5F5F5;
+  font-family: "Poppins", serif;
+  background-color: #f5f5f5;
+  color: #333;
+  margin-top: 8px;
 }
 
 .user-form-info label {
@@ -81,12 +84,15 @@
 
 .cancel-btn {
   background-color: transparent;
-  border: none;
+  border: 1px solid rgba(128, 128, 128, 0.25);
   font-size: 14px;
+  color: #333;
   height: 56px;
   width: 150px;
   border-radius: 4px;
   transition: all 0.4s;
+  display: inline-block;
+  /* padding: 8px 16px; */
 }
 
 .cancel-btn:hover {
@@ -105,6 +111,7 @@
   width: 200px;
   height: 56px;
   transition: all 0.4s;
+  display: inline-block;
 }
 
 .change-btn:hover {
